fix/wrong-role-arn-secret-name

--- a/.github/workflows/s3-site-deploy.yml
+++ b/.github/workflows/s3-site-deploy.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
-        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+        role-to-assume: ${{ secrets.GHA_S3_PUBLISHER_ROLE_ARN_AWS }}
         aws-region: us-east-1
 
     - name: Upload files to S3
